# bevy_jam_7

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yaml
assets/: env_coll.glb  mice_col.glb  mice_env.glb  mice_nav.nav  mice_tar.glb  navmesh.glb  player.glb
assets/levels/mice/: environment.glb  environment_col.glb  god.glb  navmesh.nav
assets/models/: cheese.glb  eye.glb
assets_source/: gradient_texture.af  models.blend  thumbnail.af
examples/: load_mice_level.rs
src/: anim.rs  audio.rs  env.rs  game.rs  god.rs  loader.rs  main.rs  menus.rs  physics.rs  player.rs  powerup.rs  shuffle.rs  target.rs  transition.rs
