[package]
name = "jam7"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release.package.wgpu-types]
debug-assertions = false

[dependencies]
bevy = { version = "0.18", default-features = false, features = [ "3d_bevy_render", "default_app", "default_platform", "scene", "ui_api", "ui_bevy_render"]}
bevy_enhanced_input = "0.23.2"

avian3d = "0.6.0-rc.1"

bevy_rerecast = { version = "0.4.0", default-features = false }
avian_rerecast = "0.5.0-rc.1"
bevy_landmass = "0.11.0"
landmass_rerecast = "0.2.0"

bevy_tweening = "0.15.0"
bevy_seedling = "0.7.0"
bevy_framepace = "0.21.0"

rand_core = "0.10.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
bevy_rand = "0.14.0"
bevy_prng = { version = "0.14.0", features = ["chacha20"] }

bevy-inspector-egui = { version = "0.36.0", optional = true }

wasm-bindgen = { version = "=0.2.108", optional = true }

[lints.clippy]
pedantic = {level = "warn", priority = -1}
must_use_candidate = "allow"
wildcard_imports = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"

[features]
default = [
    "dev_native",
]
native = [
    "bevy/wayland",
    "bevy/x11",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    "bevy_rerecast/debug_plugin",
    "bevy_rerecast/editor_integration",
]
dev_native = [
    "dev",
    "native",
    "bevy/bevy_remote",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "bevy_rerecast/editor_integration",
]
web = ["bevy/webgpu", "bevy_seedling/web_audio", "dep:wasm-bindgen", "bevy_rand/wasm_js"]
release = []

[patch.crates-io]
# Not released yet
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace" }
